infra/k8s/eventbus.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventbus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: sundeepcharan/event-bus
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---
# The Cluster IP since being one-one for every deployment, is going to be written on the same deployment file.
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  type: ClusterIP
  selector:
    app: event-bus
  ports:
    - port: 9996
      targetPort: 9996
      protocol: TCP
      name: event-bus-port
